# chip-8

./: .gitignore  CMakeLists.txt  README.md  config.c  config.h  cpu.c  cpu.h  logger.h  main.c
src/: config.c  config.h  logger.h  main.c
